--- a/actinide/README
+++ b/actinide/README
@@ -1,3 +1,5 @@
               Actinide GTH pseudopotential and MOLOPT basis set README
 
-Enjoy using these pseudopotential and basis sets! 
+We are optimizing GTH pseudopotential and MOLOPT basis set for actinide series. It is of great 
+importance but difficult!
+
