--- a/lanthanide/README
+++ b/lanthanide/README
@@ -1,22 +1,22 @@
-              Lanthanide GTH pseudopotential and MOLOPT basis set README
+              Lanthanide GTH pseudopotentials and MOLOPT basis set README
 
-We build the GTH pseudopotential and MOLOPT basis sets for lanthanide series. If you have any
+We build GTH pseudopotentials and MOLOPT basis sets for lanthanide series. If you have any
 question, please send problems and feedback to lujunbo15@gmail.com and roger.rousseau@pnnl.gov.
-If you want to use our pseudopotential and basis sets, please read our literature at first:
+If you want to use our pseudopotentials and basis sets, please read our literature at first:
 J. Chem. Theory Comput. 2019, 15, 5987−5997.
 
 GTH pseudopotential is an explicit seperable pseudopotential. This pseudopotential is a little
-different from quantum chemistry pseudopotential. It is used in CP2K, CPMD and QE programs.
-For our lanthanides GTH pseudopotential, we adopt large-core pseudopotential from La to Ga,
+different from quantum chemistry pseudopotential. It is used in CP2K, CPMD and ABINIT programs.
+For our lanthanide GTH pseudopotentials, we adopt large-core pseudopotential from La to Ga,
 and medium-core pseuopotential from Tb to Lu. When users use these pseudopotential, please
 be careful to set cutoff in CP2K. For late lanthanide using medium-core pseudopotential, larger
-cutoff (>500 Ry) is safer. The MOLOPT basis set format is a little different from basis
-set of d-block. We use the same Gaussian exponents for s, p and d states, and uncontract f 
+cutoff (>500 Ry) is safer. The MOLOPT basis sets format is a little different from basis
+sets of d-block. We use the same Gaussian exponents for s, p and d states, and uncontract f 
 states. This is mainly due to the extremely localized 4f orbital.
 
-The original GTH pseudopotential is in GTH directory. The final version GTH pseudopotential
-and basis sets are in final_PP_BS directory. Users can copy the GTH pseudopotential and basis
-set in final_PP_BS directory. The format is CP2K format. For other softwares, users need to
+The original GTH pseudopotentials are in GTH directory. The final version GTH pseudopotentials
+and basis sets are in final_PP_BS directory. Users can copy GTH pseudopotentials and basis sets
+in final_PP_BS directory. The format is CP2K format. For other softwares, users need to
 change its format.
 
-Enjoy using these pseudopotential and basis sets! 
+Enjoy using lanthanide pseudopotentials and basis sets! 
